Add support in upstart exporter for custom reload and stop signals.

--- a/data/export/upstart/process.conf.erb
+++ b/data/export/upstart/process.conf.erb
@@ -9,6 +9,10 @@ env <%= name.upcase %>='<%= value.gsub(/'/, "'\"'\"'") %>'
 
 setuid <%= user %>
 
+reload signal <%= reload_signal %>
+
+kill signal <%= stop_signal %>
+
 chdir <%= engine.root %>
 
 exec <%= process.command %>
